@@ -1,3 +1,14 @@
+2004-05-27  Kevin Decker  <kdecker@apple.com>
+
+        Reviewed by NOBODY (OOPS!).
+
+        * kjs/error_object.cpp:
+        (ErrorProtoFuncImp::call):
+        * kjs/internal.cpp:
+        (Parser::parse):
+        * kjs/object.cpp:
+        (KJS::Error::create):
+
 === Safari-142 ===
 
 2004-05-27  Richard Williamson   <rjw@apple.com>
